--- a/styles.css
+++ b/styles.css
@@ -30,11 +30,26 @@ body {
 }
 #greeting-container {
   display: flex;
-  flex-direction: column;
+  justify-content: space-around;
   align-items: center;
-  height: 600px;
+  height: auto; /* Adjusted height */
   background-color: #f0f0f0;
 }
+
+.image-container {
+  width: 200px; /* Adjusted width */
+  height: 200px; /* Adjusted height */
+  overflow: hidden;
+  /* border-radius: 50%; */
+}
+
+.image-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
 
 #scrollButton {
   margin-top: 120px;
@@ -146,8 +161,7 @@ body {
   margin-top: 10px;
 }
 #downloadCVButton,
-#githubButton,
-#ppButton {
+#githubButton {
   margin-top: 100px;
   padding: 30px;
   margin-right: 30px;
@@ -161,8 +175,7 @@ body {
 }
 
 #downloadCVButton:hover,
-#githubButton:hover,
-#ppButton:hover {
+#githubButton:hover {
   background-color: #333;
   color: #fff;
 }
