--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1744,15 +1744,35 @@ input, select, textarea {
 
 /* Image */
 
+	 /* .image {
+		display: inline-block;
+		border: 0;
+		transition: transform 0.3s, border-radius 0.8s;
+	} */
+
+
 	.image {
+		position: relative;
 		display: inline-block;
 		border: 0;
 	}
 
+
+
+
+
+		/* .image img {
+			display: block;
+			width: 100%;
+		} */
+
+
+
 		.image img {
 			display: block;
 			width: 100%;
-		}
+			transition: transform 0.7s, opacity 0.8s; /* Add opacity transition */		}
+
 
 		.image.avatar48 {
 			width: 48px;
@@ -1770,10 +1790,10 @@ input, select, textarea {
 			width: 100%;
 		}
 
-		.image.featured {
-			/* display: block; */
+		.image.featured { */
+			/* display: block; 
 			/* width: 100%; */
-			margin: 0 0 2em 0;
+			 margin: 0 0 2em 0;
 		}
 
 		.image.left {
@@ -1789,7 +1809,33 @@ input, select, textarea {
 			.image.centered img {
 				margin: 0 auto;
 				width: auto;
-			}
+			} 
+
+.hover-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    transition: opacity 0.9s;
+}
+
+/* Hover effect */
+.image:hover {
+    transform: scale(1.45); /* Increase size on hover */
+	}
+
+.image:hover img {
+    opacity: 0;
+}
+
+.image:hover .hover-image {
+    opacity: 1;
+}
+
+	
+
+
+
 
 /* List */
 
@@ -1948,7 +1994,8 @@ input, select, textarea {
 		color: #fff !important;
 		text-decoration: none;
 		padding: 0.75em 2.5em 0.75em 2.5em;
-		background-color: #8ebebc;
+		background-color: #f05033; 
+		/* cor do botao */
 		border: 0;
 		cursor: pointer;
 		background-image: -moz-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15)), url("images/overlay.png");
@@ -1966,7 +2013,7 @@ input, select, textarea {
 		input[type="reset"]:hover,
 		button:hover,
 		.button:hover {
-			background-color: #9ececc;
+			background-color: #ec4e20;
 		}
 
 		input[type="button"]:active,
@@ -2169,7 +2216,7 @@ input, select, textarea {
 				}
 
 					#nav ul li a.active span:before {
-						color: #e27689;
+						color: #f05033;
 					}
 
 /* Footer */
