--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1757,8 +1757,16 @@ input, select, textarea {
 		border: 0;
 	}
 
+	.imageBio {
+		position: relative;
+		display: inline-block;
+		border: 0;
+	}
 
-
+	.imageBio img {
+		display: block;
+		width: 100%;}
+	/*	transition: transform 0.5s, opacity 0.8s;  Add opacity transition 		 */
 
 
 		/* .image img {
@@ -1772,15 +1780,20 @@ input, select, textarea {
 			display: block;
 			width: 100%;
 			transition: transform 0.5s, opacity 0.8s; /* Add opacity transition */		}
+			.imageAvatar img {
+				display: block;
+				width: 100%;
+					}
+	
 
-
-		.image.avatar48 {
+		
+		.imageAvatar.avatar48 {
 			width: 48px;
 			height: 48px;
-			background: #f00;
+			
 		}
 
-			.image.avatar48 img {
+			.imageAvatar.avatar48 img {
 				width: 48px;
 				height: 48px;
 			}
@@ -1790,7 +1803,7 @@ input, select, textarea {
 			width: 100%;
 		}
 
-		.image.featured { */
+		.image.featured { 
 			/* display: block; 
 			/* width: 100%; */
 			 margin: 0 0 2em 0;
@@ -1833,8 +1846,69 @@ input, select, textarea {
 }
 
 	
-
-
+/*skills*/
+.skills {
+	display: flex;
+	justify-content: center;
+	gap: 25px;
+	padding: 1%;
+  }
+  
+  .skills-column {
+	width: 125px; /* Default width for each column */
+	row-gap: 25px;
+	height: 125px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+  }
+  
+  .skills-item {
+	background-color: #ffffff;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-evenly;
+	border-radius: 20px;
+	border: 3px solid #333;
+  }
+  
+  .skills-item:hover {
+	border: 3px solid #ffffff;
+	background-color: #333;
+	transition: background-color 0.5s, color 0.5s;
+  }
+  
+  .skills-item img {
+	height: 60px;
+	margin-bottom: 10px;
+	padding: 10px;
+	border-radius: 30px;
+  }
+  
+  .skills-name {
+	font-size: 12px;
+  }
+  
+  .skills-name:hover {
+	color: #ffffff;
+	transition: background-color 0.5s, color 0.5s;
+  }
+  
+  @media only screen and (max-width: 768px) {
+	.skills {
+	  flex-wrap: wrap; /* Allow skills columns to wrap on smaller screens */
+	}
+	.skills-column {
+	  width: calc(33.33% - 30px); /* Adjust width for smaller screens */
+	  margin-right: 20px; /* Adjust spacing between columns */
+	}
+	.skills-column:last-child {
+	  margin-right: 0; /* Remove margin for the last column */
+	}
+  }
+  
+  
 
 
 /* List */
